Fix social-icons spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,5 +1,6 @@
 ---
 ---
+
 $base: #272b32;
 $light: $base;
 $highlight: #fc036f;
@@ -260,7 +261,7 @@ body {
     .social {
       margin-left: auto;
       a {
-        padding-right: 10px;
+        padding-right: 0px;
         text-decoration: none;
       }
     }
